// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListMenu indicates an active list 1`] = `
<ul
  className="list-menu"
>
  <li
    className="list-menu-item active"
  >
    <div
      className="list-menu-item-content"
    >
      <div
        className="list-menu-item-icon"
      />
      <p
        className="list-menu-item-text"
      >
        Very High
      </p>
    </div>
  </li>
  <li
    className="list-menu-item "
  >
    <div
      className="list-menu-item-content"
    >
      <div
        className="list-menu-item-icon"
      />
      <p
        className="list-menu-item-text"
      >
        High
      </p>
    </div>
  </li>
  <li
    className="list-menu-item "
  >
    <div
      className="list-menu-item-content"
    >
      <div
        className="list-menu-item-icon"
      />
      <p
        className="list-menu-item-text"
      >
        Moderate
      </p>
    </div>
  </li>
  <li
    className="list-menu-item "
  >
    <div
      className="list-menu-item-content"
    >
      <div
        className="list-menu-item-icon"
      />
      <p
        className="list-menu-item-text"
      >
        Low
      </p>
    </div>
  </li>
</ul>
`;

exports[`ListMenu renders all lists 1`] = `
<ul
  className="list-menu"
>
  <li
    className="list-menu-item "
  >
    <div
      className="list-menu-item-content"
    >
      <div
        className="list-menu-item-icon"
      />
      <p
        className="list-menu-item-text"
      >
        Very High
      </p>
    </div>
  </li>
  <li
    className="list-menu-item "
  >
    <div
      className="list-menu-item-content"
    >
      <div
        className="list-menu-item-icon"
      />
      <p
        className="list-menu-item-text"
      >
        High
      </p>
    </div>
  </li>
  <li
    className="list-menu-item "
  >
    <div
      className="list-menu-item-content"
    >
      <div
        className="list-menu-item-icon"
      />
      <p
        className="list-menu-item-text"
      >
        Moderate
      </p>
    </div>
  </li>
  <li
    className="list-menu-item "
  >
    <div
      className="list-menu-item-content"
    >
      <div
        className="list-menu-item-icon"
      />
      <p
        className="list-menu-item-text"
      >
        Low
      </p>
    </div>
  </li>
</ul>
`;
